--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,4 @@
+
 :root {
   --primary: #015258;
   --orange: #F4511E;
@@ -23,7 +24,8 @@
   --blue-darken-2: #1976D2;
   --blue-darken-3: #1565C0;
   --blue-darken-4: #0D47A1;
-  --trans: all .3s
+  --trans: all .3s;
+  --box-shadow: 0px 0px 16px -1px rgba(0,0,0,.1);
 }
 
 html,
